# talos-data

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  NEWS  README.md  package.xml
config/: joint_limits.yaml  talos_plotjuggler.xml
gazebo/: gazebo.urdf.xacro
launch/: talos_bringup.launch  talos_gazebo.launch  talos_gazebo_alone.launch  talos_gazebo_spawn_hs.launch  talos_gazebo_spawn_hs_wide.launch  talos_joint_command_rviz.launch  talos_spawn.launch  talos_spawn_stiff.launch
robots/: talos_arm.urdf.xacro  talos_full.urdf  talos_full.urdf.xacro  talos_full_collision.urdf  talos_full_no_grippers.urdf.xacro  talos_full_no_lower_arm.urdf.xacro  talos_full_v1.urdf.xacro  talos_full_v2.urdf.xacro  talos_gripper.urdf.xacro  talos_head.urdf.xacro  talos_left_arm.urdf  talos_lower_body.urdf.xacro  talos_lower_body_with_torso.urdf.xacro  talos_reduced.urdf  talos_small.urdf  talos_small.urdf.xacro  talos_torso.urdf.xacro  upload.launch  upload_arm.launch  upload_gripper.launch  upload_head.launch  upload_legs.launch  upload_talos.launch
scripts/: start_talos_gazebo.py  start_talos_gazebo_16_04.py
src/: SpringPlugin.cc  SpringPlugin.hh
srdf/: talos.srdf  talos_wpg.srdf
talos_description/: CMakeLists.txt
talos_description/srdf/: talos.srdf
urdf/: pyrene.urdf  talos_full.urdf  talos_full_accurate_gripper.urdf  talos_full_collision.urdf  talos_full_common.urdf.xacro  talos_full_v2.urdf  talos_full_v2_with_lidar.urdf  talos_reduced.urdf  talos_reduced_v2.urdf  talos_small.urdf
urdf/arm/: arm.urdf.xacro  wrist.urdf.xacro
urdf/gripper/: gripper.transmission.xacro  gripper.urdf.xacro
urdf/head/: head.urdf.xacro
urdf/leg/: leg.transmission.xacro  leg.urdf.xacro  leg_passive.urdf.xacro
urdf/sensors/: calibration.xacro  orbbec_astra_pro.urdf.xacro
urdf/torso/: torso.urdf.xacro
