<?xml version="1.0"?>
<package>
  <name>talos_data</name>
  <version>0.0.14</version>
  <description>The talos_data package</description>

  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
  
</package>
